rpi-cluster/orchestration/netpols/tunnel/blog-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tunnel-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: blog
      podSelector:
        matchLabels:
          app: nginx
    ports:
    - port: 8443
